--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@ div.grid.items{
 	place-items: center;
 	box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5);
 	padding: 2vh;
+	grid-gap: 1vh;
 }
 .catalog-item > img {
 	max-width: 200px;
@@ -91,3 +92,6 @@ div.grid.items{
 	color: red;
 }
 
+span.cartqty {
+	color: red;
+}
